@@ -1,3 +1,9 @@
+2015-12-12  Paolo Bonzini  <bonzini@gnu.org>
+
+	PR sanitizer/68418
+	* c-family/c-ubsan.c (ubsan_instrument_shift): Disable
+	sanitization of left shifts for wrapping signed types as well.
+
 2015-12-11  Eric Botcazou  <ebotcazou@adacore.com>
 
 	PR middle-end/68215
